--- a/buoi1/index.html
+++ b/buoi1/index.html
@@ -5,7 +5,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>TOKYO</title>
+  <title>TP HCM</title>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;900&display=swap"
+    rel="stylesheet">
   <link rel="stylesheet" href="./css/style.css">
 </head>
 
@@ -22,7 +24,7 @@
         <a href="./tokyo.html">TOKYO</a>
       </article>
       <section>
-        <h2>TOKYO</h2>
+        <h2>TPHCM</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam corporis rem, aliquid dolores non et id iste
           exercitationem</p>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sequi voluptas illo error sapiente velit saepe
