--- a/buoi1/hanoi.html
+++ b/buoi1/hanoi.html
@@ -28,8 +28,7 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam corporis rem, aliquid dolores non et id iste
           exercitationem</p>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sequi voluptas illo error sapiente velit saepe
-          debitis! Eveniet pariatur autem eius. Sequi, voluptatibus odit quia quod, velit omnis quidem ipsa impedit
-          ullam accusamus rerum fuga quis? Quia rerum perspiciatis animi repellendus.</p>
+          debitis! Eveni Quia rerum perspiciatis animi repellendus.</p>
       </section>
     </main>
     <footer>
